crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@183.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_range_gist where ir &> int4multirange(int4range(100,200), int4range(400,500));"
---
SelectStmt@0..104
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..36
    Ident@21..36 "test_range_gist"
  Whitespace@36..37 " "
  Where@37..42 "where"
  Whitespace@42..43 " "
  AExpr@43..101
    ColumnRef@43..45
      Ident@43..45 "ir"
    Whitespace@45..46 " "
    Op@46..48 "&>"
    Whitespace@48..49 " "
    FuncCall@49..101
      Ident@49..63 "int4multirange"
      Ascii40@63..64 "("
      FuncCall@64..81
        Ident@64..73 "int4range"
        Ascii40@73..74 "("
        AConst@74..77
          Iconst@74..77 "100"
        Ascii44@77..78 ","
        AConst@78..81
          Iconst@78..81 "200"
      Ascii41@81..82 ")"
      Ascii44@82..83 ","
      Whitespace@83..84 " "
      FuncCall@84..101
        Ident@84..93 "int4range"
        Ascii40@93..94 "("
        AConst@94..97
          Iconst@94..97 "400"
        Ascii44@97..98 ","
        AConst@98..101
          Iconst@98..101 "500"
  Ascii41@101..102 ")"
  Ascii41@102..103 ")"
  Ascii59@103..104 ";"

