crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@195.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_range_gist where ir >> int4range(100,500);"
---
SelectStmt@0..68
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..36
    Ident@21..36 "test_range_gist"
  Whitespace@36..37 " "
  Where@37..42 "where"
  Whitespace@42..43 " "
  AExpr@43..66
    ColumnRef@43..45
      Ident@43..45 "ir"
    Whitespace@45..46 " "
    Op@46..48 ">>"
    Whitespace@48..49 " "
    FuncCall@49..66
      Ident@49..58 "int4range"
      Ascii40@58..59 "("
      AConst@59..62
        Iconst@59..62 "100"
      Ascii44@62..63 ","
      AConst@63..66
        Iconst@63..66 "500"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

