crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@199.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_range_gist where ir @> '{}'::int4multirange;"
---
SelectStmt@0..70
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..36
    Ident@21..36 "test_range_gist"
  Whitespace@36..37 " "
  Where@37..42 "where"
  Whitespace@42..43 " "
  AExpr@43..69
    ColumnRef@43..45
      Ident@43..45 "ir"
    Whitespace@45..46 " "
    Op@46..48 "@>"
    Whitespace@48..49 " "
    TypeCast@49..69
      AConst@49..53
        Sconst@49..53 "'{}'"
      Typecast@53..55 "::"
      TypeName@55..69
        Ident@55..69 "int4multirange"
  Ascii59@69..70 ";"

